task5/tests/group/output/test6.out
lli: <stdin>:32:10: error: use of undefined value '%label_0'
br label %label_0
         ^
